# django-simpleblog

./: LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg
simple_blog/: admin.py  apps.py  models.py  urls.py  views.py
simple_blog/migrations/: 0001_initial.py  0002_alter_post_subtitle.py  0003_post_slug.py
simple_blog/templates/: base.html  postDetail.html  postList.html
